--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<li> git clone "path-to-repository" (Клонируем репозиторий)</li>
 		<li> git status (Статус текущего локального репозитория) </li>
 		<li> git add "path-to-file" (Добавить новый файл под контроль ГИТ)</li>
-		<li> git comit -am "added new file index.html </li>		
+		<li> git comit -am "added new file index.html" </li>	
+		<li> git commit -am "Added new file index.html"</li>	
 </div>
 </body>
